Resolves some CSS issues that had interfered with the proper page elements coming visible at the right time.

--- a/npcalc.css
+++ b/npcalc.css
@@ -11,10 +11,6 @@
 	font-weight:bold;
 }
 
-.npcalcHidden {
-	display:none;
-}
-
 .npcalcDisclaimer {
 	margin-top: 0px;
 	margin-right: 8px;
